--- a/frontend/banking-frontend/Dockerfile
+++ b/frontend/banking-frontend/Dockerfile
@@ -1,7 +1,20 @@
-FROM node:18
+# Use official Node.js image
+FROM node:18-alpine
+
+# Set working directory
 WORKDIR /app
+
+# Copy package.json and package-lock.json first
 COPY package*.json ./
+
+# Install dependencies
 RUN npm install
+
+# Copy the rest of the project
 COPY . .
+
+# Expose port
 EXPOSE 3000
+
+# Start the app
 CMD ["npm", "start"]
